tests/language_modules/17_math_module/invalid_semantics/math_argument_count.vf
module MathArgumentCount

procedure main()
is
    let result_value: Double = Math.pow(2.0)
    check result_value = 2.0
end main

end MathArgumentCount